@@ -4,6 +4,10 @@ h1. Release Notes for Sirius
 
 This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.
 
+h2(#sirius6.2.2). Changes in Sirius 6.2.2
+
+There are no user-visible changes in Sirius 6.2.2 compared to 6.2.1. The only changes are internal and related either to the build process or to the automated tests.
+
 h2(#sirius6.2.1). Changes in Sirius 6.2.1
 
 h3. Developer-Visible Changes
